--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
         </style>
     </head>
     <body id="BG">
+        <script type="text/javascript">
+            alert("欢迎加入一中信息社，请用微信扫描二维码加入纳新群")
+        </script>
     </body>
 </html>
