--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <title>请扫描二维码加入纳新群</title>
+        <link rel="icon" href="https://kokomiserver.github.io/-/kokomi.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="https://kokomiserver.github.io/-/kokomi.ico" type="image/x-icon">
         <style>
             #BG{
             position:fixed;
